--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "isu-test",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "angular": "1.3.20",
+    "jquery": "~2.1.1",
+    "bootstrap": "4.1.3",
+    "angular-route": "1.3.20",
+    "angular-resource": "1.3.20",
+    "moment": "2.22.2"
+  }
 }
