--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "isu-test",
   "private": true,
   "dependencies": {
-    "angular": "1.3.20",
+    "angular": "1.6.4",
+    "angular-material": "1.1.4",
+    "angular-animate": "1.6.4",
+    "angular-aria": "1.6.4",
     "jquery": "~2.1.1",
     "bootstrap": "4.1.3",
-    "angular-route": "1.3.20",
-    "angular-resource": "1.3.20",
-    "moment": "2.22.2"
+    "angular-route": "1.6.4",
+    "angular-resource": "1.6.4",
+    "moment": "2.22.2",
+    "popper.js": "^1.14.3"
   }
 }
