--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "private": true,
   "dependencies": {
     "angular": "1.6.4",
-    "angular-material": "1.1.4",
     "angular-animate": "1.6.4",
     "angular-aria": "1.6.4",
-    "jquery": "~2.1.1",
-    "bootstrap": "4.1.3",
-    "angular-route": "1.6.4",
+    "angular-material": "1.1.4",
     "angular-resource": "1.6.4",
+    "angular-route": "1.6.4",
+    "angular-sanitize": "1.6.4",
+    "bootstrap": "4.1.3",
+    "jquery": "~2.1.1",
     "moment": "2.22.2",
-    "popper.js": "^1.14.3"
+    "ng-quill": "^4.1.0",
+    "popper.js": "^1.14.3",
+    "quill": "^1.3.6"
   }
 }
